force-app/main/default/objects/Abstract_Review__c/Abstract_Review__c.object-meta.xml
<CustomObject>
    <label>Abstract Review</label>
    <nameField>
        <displayFormat>AR{YY}-{000000}</displayFormat>
        <label>Abstract Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abstract Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>