force-app/main/default/objects/Abstract_Review__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Public Abstract Submissions can be assigned for review.</errorMessage>
        <filterItems>
            <field>Abstract__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Public Submission</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Abstract__c</referenceTo>
    <relationshipLabel>Abstract Reviews</relationshipLabel>
    <relationshipName>Abstract_Reviews</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>