force-app/main/default/objects/Abstract_Review__c/fields/Abstract_Number__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Number__c</fullName>
    <formula>Abstract__r.Name</formula>
    <label>Abstract Number</label>
    <type>Text</type>
</CustomField>