force-app/main/default/objects/Abstract_Review__c/fields/Abstract_Title__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Title__c</fullName>
    <formula>Abstract__r.Title__c</formula>
    <label>Abstract Title</label>
    <type>Text</type>
</CustomField>