force-app/main/default/objects/Abstract_Review__c/fields/Comment_on_Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_Conflict_of_Interest__c</fullName>
    <label>Comment on Conflict of Interest</label>
    <type>TextArea</type>
</CustomField>