force-app/main/default/objects/Abstract_Review__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>IF(ISPICKVAL(Grading__c , &quot;1 - excellent&quot;) , 1, 
IF(ISPICKVAL(Grading__c , &quot;2 - good&quot;) , 2, 
IF(ISPICKVAL(Grading__c , &quot;3 - average&quot;) , 3, 
IF(ISPICKVAL(Grading__c , &quot;4 - fair&quot;) , 4,
IF(ISPICKVAL(Grading__c , &quot;5 - bad&quot;) , 5, 0)))))</formula>
    <label>Grade #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>