force-app/main/default/objects/Abstract_Review__c/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <label>Grading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - excellent</fullName>
            </value>
            <value>
                <fullName>2 - good</fullName>
            </value>
            <value>
                <fullName>3 - average</fullName>
            </value>
            <value>
                <fullName>4 - fair</fullName>
            </value>
            <value>
                <fullName>5 - bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>