force-app/main/default/objects/Abstract_Review__c/fields/Investigator_Award__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I recommend this abstract for the Investigator Award</description>
    <label>Investigator Award</label>
    <type>Checkbox</type>
</CustomField>