force-app/main/default/objects/Abstract_Review__c/fields/Public_relevance__c.field-meta.xml
<CustomField>
    <fullName>Public_relevance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This abstract is relevant for the public and should be forwarded to the press office.</description>
    <label>Public relevance</label>
    <type>Checkbox</type>
</CustomField>