force-app/main/default/objects/Abstract_Review__c/fields/Reviewer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Reviewer__r.Contact__c ,  Reviewer__r.Contact__r.FirstName &amp; &quot; &quot;&amp;  Reviewer__r.Contact__r.LastName )</formula>
    <label>Reviewer Contact</label>
    <type>Text</type>
</CustomField>