force-app/main/default/objects/Abstract_Review__c/fields/Reviewer_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Membership_Status__c</fullName>
    <formula>Reviewer__r.Contact__r.Membership_Status__c</formula>
    <label>Reviewer Membership Status</label>
    <type>Text</type>
</CustomField>