force-app/main/default/objects/Abstract_Review__c/validationRules/Review_Submission_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Submission_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK($User.ContactId)) &amp;&amp;
ISCHANGED(Stage__c)&amp;&amp;
ISPICKVAL(Stage__c, &quot;Submitted&quot;) &amp;&amp;
NOT(
(ISPICKVAL(Reviewer__r.Event__r.Active_Abstract_Review_Window__c , &quot;Abstract Review&quot;)  || ISPICKVAL(Reviewer__r.Event__r.Active_Abstract_Review_Window__c , &quot;Late Breaking Abstract Review&quot;) )
)</errorConditionFormula>
    <errorMessage>The abstract review is closed.</errorMessage>
</ValidationRule>