force-app/main/default/objects/Abstract_Review__c/listViews/Abstract_Review_Assignment.listView-meta.xml
<ListView>
    <fullName>Abstract_Review_Assignment</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Grading__c</columns>
    <columns>Public_relevance__c</columns>
    <columns>Investigator_Award__c</columns>
    <columns>Comments__c</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>Abstract Review Assignment</label>
</ListView>