force-app/main/default/objects/Abstract_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Abstract__c</columns>
    <columns>Reviewer__c</columns>
    <columns>Reviewer_Contact__c</columns>
    <columns>Grade__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>