force-app/main/default/objects/Abstract_Review__c/listViews/Conflicts_of_Interest.listView-meta.xml
<ListView>
    <fullName>Conflicts_of_Interest</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Grading__c</columns>
    <columns>Public_relevance__c</columns>
    <columns>Investigator_Award__c</columns>
    <columns>Comments__c</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Conflicts of Interest</label>
</ListView>